--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -133,9 +133,11 @@
     border-radius: 3px;
     font-weight: 700;
     outline: none;
+    cursor: pointer;
 }
 #buscar-butt{
     display: none;
+    
 }
 .searchIcon{
     position: absolute;
