--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,57 +1,27 @@
 #footer-cont{
-    /* remove */
-    margin-top: 300px;
-    /* remove */
     display: block;
     width: 100%;
 }
-#footer-inner{
+
+
+@media only screen and (min-width: 1040px) {
+    #footer-inner{
     max-width: 1260px;
     margin-left: auto;
     margin-right: auto;
     padding-right: 2.5em;
     padding-left: 2.5em;
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+}
 }
 
-#footer-top{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    padding-bottom: 1em;
-    border-bottom: 1px solid #cccccc;
-    margin-bottom: 1.25em;
-
-}
-#footer-logo-cont{
-    display: grid;
-    align-items: center;
-    justify-items: center;
-}
-#logo{
-    width: 218.25px;
-    height: 22px;
-}
-.icon{
-    height: 27px;
-    width: 27px;
-    margin-right: 3em;
-    color: black;
-    margin-left: 5px;
-}
-.icon-link{
-    display: inline-flex;
-}
-#footer-stores-inner{
-    display: grid;
-    align-items: center;
-    justify-items: end;
-    grid-template-columns: 130px 130px;
-    grid-gap: 35px;
-
-}
-#footer-stores{
-    display: grid;
-    align-items: center;
-    justify-items: end;
+@media only screen and (max-width: 1040px) {
+    #footer-inner{
+        max-width: 1260px;
+        
+        padding-right: 1.25em;
+        padding-left: 1.25em;
+        display: grid;
+    }
+    
 }
