--- a/src/components/body/body.css
+++ b/src/components/body/body.css
@@ -1,6 +1,69 @@
+
+@media only screen and (min-width: 1200px) {
+    #main-outter{
+        max-width: 1260px;
+        padding-right: 2.5em;
+        padding-left: 2.5em;
+        margin-right: auto;
+        margin-left: auto;
+        display: grid;
+        grid-template-columns: 1fr 300px;
+    }
+   
+    .banner-side{
+        display: block;
+        margin: auto;
+        width: 300px;
+        height: 600px;
+        background: #a0dbe9;
+    }
+}
+@media only screen and (min-width: 1040px) and (max-width: 1200px) {
+    #main-outter{
+        max-width: 1260px;
+        padding-right: 2.5em;
+        padding-left: 2.5em;
+        /* width: 100%; */
+        margin-right: auto;
+        margin-left: auto;
+        display: grid;
+        grid-template-columns: 1fr 300px;
+    }
+   
+
+    .banner-side{
+        display: block;
+        margin: auto;
+        width: 300px;
+        height: 600px;
+        background: #a0dbe9;
+    }
+}
+@media only screen and (max-width: 1040px) {
+    #main-outter{
+        max-width: 1260px;
+        padding-right: 2.5em;
+        padding-left: 2.5em;
+        /* width: 100%; */
+        margin-right: auto;
+        margin-left: auto;
+        display: grid;
+        grid-template-columns: 1fr ;
+    }
+    
+
+    .banner-side{
+      display: none;
+    }
+    #side-bar{
+        display: none;
+    }
+}
+
 #body-cont{
     padding-top: 100px;
     padding-bottom: 50px;
+    z-index: 5;
 }
 #banner-top{
     background-color: #f3f3f3;
@@ -8,31 +71,12 @@
     width: 100%;
     margin-left: 0;
 }
+
 #banner-inner{
     max-width: 1260px;
     width: 100%;
     height: 170px;
     display: block;
     margin: auto;
-    background: #a0dbe9;
-}
-
-#main-outter{
-    max-width: 1260px;
-    padding-right: 2.5em;
-    padding-left: 2.5em;
-    /* width: 100%; */
-    margin-right: auto;
-    margin-left: auto;
-    display: grid;
-    grid-template-columns: 1fr 300px;
-}
-
-
-.banner-side{
-    display: block;
-    margin: auto;
-    width: 300px;
-    height: 600px;
     background: #a0dbe9;
 }
