--- a/src/components/body/main/main.css
+++ b/src/components/body/main/main.css
@@ -1,7 +1,59 @@
-
-#main{
-    margin-right: 80px;
+@media only screen and (min-width: 1200px) {
+    #articles{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        justify-items: center;
     }
+    #main{
+        margin-right: 80px;
+        }
+        .article-photo{
+            width: 282.81px;
+            height: 188.53px;
+        }
+}
+@media only screen and (min-width: 760px) and (max-width: 1200px) {
+    #articles{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+    }
+    #main{
+        margin-right: 40px;
+        }
+       
+}
+@media only screen and (max-width: 760px)  {
+    #articles{
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-items: center;
+    }
+    
+
+}
+
+#articles{
+    grid-column-gap: 10%;
+}
+
+.article-photo{
+    width: 100%;
+    background: #f2f2f2;
+    max-height: 100%;
+    max-width: 100%;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    z-index: 10;
+    
+}
     #title{
         font-family: "SuecaSlab", "Georgia", "serif";
         font-size: 1.875rem;
@@ -31,16 +83,9 @@
     
     }
 
-    #articles{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        justify-items: center;
-    }
+    
 
-    .article-photo{
-        width: 282.81px;
-        height: 188.53px;
-    }
+    
     .article-photo-cont{
         width: 100%;
         display: grid;
@@ -53,3 +98,21 @@
         justify-items: center;
     }
 
+    .article-title{
+        font-family: sans-serif;
+    font-size: 1.0625rem;
+    letter-spacing: -0.4px;
+    text-transform: lowercase;
+    font-family: "SuecaSlab", "Georgia", "serif";
+    font-weight: bold;
+    }
+
+    .article-date{
+        font: 400 0.875rem "Arial", "sans-serif";
+    color: #5a5a5a;
+    margin-top: 0.375em;
+    }
+.article{
+    margin-bottom: 30px;
+
+}
