--- a/src/components/footer/nav-bar/nav-bar.css
+++ b/src/components/footer/nav-bar/nav-bar.css
@@ -19,6 +19,8 @@
     justify-items: center;
     align-items: center;
     width: 100%;
+    z-index: 15;
+
     }
     #navbar-inner{
         max-width: 450px;
