--- a/src/components/body/main/main.css
+++ b/src/components/body/main/main.css
@@ -116,3 +116,34 @@
     margin-bottom: 30px;
 
 }
+
+#loadmore{
+    padding: 0.75em 1.5em;
+    font-family: "Arial", "sans-serif";
+    border-radius: 3px;
+    font-weight: bold;
+    outline: none;
+    cursor: pointer;
+    height: 100%;
+    font-size: 0.75em;
+    padding: 0.75em 1.5em;
+    background-color: #ffffff;
+    border: 1px solid #0074c4;
+    color: #0074c4;
+}
+
+#loadmore:hover{
+    opacity: 0.8;
+    transition: opacity .2s ease-in-out;
+    background-color: #0074c4;
+    border: 1px solid #0074c4;
+    color: #ffffff;
+}
+
+#loadmore-cont{
+    width: 100%;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+}
+
