--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -89,7 +89,7 @@
 }
 #user-ing:hover{
     background-color: #0074c4;
-    border: 1px solid #ffffff#0074c4;
+    border: 1px solid #0074c4;
     color: #ffffff;
 }
 
